2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume `siginfo_t' has member `si_errno'.

	* rcsutil.c (catchsigaction): Take `defined HAVE_SI_ERRNO' to be 1.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use gnulib module `sig2str'; push `psignal' cppcond down.

	* rcsutil.c: #include "sig2str.h".
	(complain_signal): New static func.
	[!HAVE_PSIGNAL] (psignal): Delete #define.
	[!HAVE_PSIGNAL] (my_psignal): Delete func.
	(catchsigaction, runv): Use `complain_signal'.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Also link against lib/libgnu.a.

	* Makefile.am (LDADD): Add options to link against ../lib/libgnu.a.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `double-slash-root'.

	* rcsfnms.c (DOUBLE_SLASH_IS_DISTINCT_ROOT): If not #define:d,
	#define to 0.
	(dir_useful_len): Use `DOUBLE_SLASH_IS_DISTINCT_ROOT'.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move the config header (and template) from src/ to lib/.

	* base.h: Don't #include "auto-sussed.h";
	instead, #include "config.h".
	* Makefile.am (AM_CPPFLAGS): Delete var.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Remove now-obsolete support for !HAVE_SIGNAL_H.

	* base.h [!HAVE_SIGNAL_H] (catchints, ignoreints, restoreints):
	Delete macros, with surrounding cpp #if block.
	* rcsutil.c: Remove #if defined HAVE_SIGNAL_H, matching #endif.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Move #include <signal.h> to .c files.

	* base.h: Don't #include <signal.h>; remove surrounding
	cpp cond #ifdef HAVE_SIGNAL_H ... #endif block.
	* rcsutil.c: #include <signal.h>.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use GCC attributes individually.

	* b-complain.h (generic_fatal, fatl_syntax): Use attribute
	declarations `printf_string' and `exiting' directly.
	* base.h (printf_string_exiting): Delete macro.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Move #include <utime.h> to .c files.
